Sat Nov  3 13:26:00 2012  Zachary Scott  <zachary@zacharyscott.net>

	* io.c (IO#new):
	  Documentation for IO#open modes and formatting
	  [ruby-core#48052] [Bug #7179]

Sat Nov  3 13:01:02 2012  Kouhei Sutou  <kou@cozmixng.org>

	* test/rexml/test_encoding.rb (EncodingTester#test_in_different_out):
	  Fix a test that expects encoding in XML declaration is changed by
	  Output's encoding. It is dropped feature.

Sat Nov  3 12:49:45 2012  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rexml/document.rb (REXML::Document#write): Document encoding
	  option. Now different encoding between XML file's encoding and
	  XML declaration's encoding is support.
	  [Feature #4872] (work in progress)
	* lib/rexml/xmldecl.rb (REXML::XMLDecl#write): Always use XMLDecl's
	  encoding.
	* test/rexml/test_document.rb: Update tests for the above change.

Sat Nov  3 12:18:35 2012  Masaki Matsushita  <glass.saga@gmail.com>

	* array.c (recursive_equal): fix not to make invalid pointers when
	  self and other are resized to same size in #== of their elements.
	  [ruby-dev:46373] [Feature #6177]

Sat Nov  3 12:06:15 2012  Kouhei Sutou  <kou@cozmixng.org>

	* test/rexml/test_xml_declaration.rb (TestXmlDeclaration#test_*):
	  Remove needless prefix from test names.

Sat Nov  3 12:04:52 2012  Kouhei Sutou  <kou@cozmixng.org>

	* test/rexml/test_xml_declaration_parent_child.rb: Rename to ...
	* test/rexml/test_xml_declaration.rb: ... this.

Sat Nov  3 11:43:00 2012  Zachary Scott  <zachary@zacharyscott.net>

	* hash.c (rb_hash_delete): Correct grammar
	  Patch by Glenn Oppegard
	  [Fixes #208 Github]

Sat Nov  3 11:28:28 2012  Narihiro Nakamura  <authornari@gmail.com>

	* NEWS: add a news about GC::Profiler.raw_data.

Sat Nov  3 11:01:32 2012  Narihiro Nakamura  <authornari@gmail.com>

	* NEWS: add a news about rb_newobj_of() and NEWOBJ_OF().

Sat Nov  3 10:17:41 2012  Narihiro Nakamura  <authornari@gmail.com>

	* eval.c (f_current_dirname): add the new method for Kernel.